<resources>
    <string name="upomp_bypay_sessionhint">由于您过长时间未操作，此次交易已失效，请退出支付，并重新进行交易。是否立即退出支付？</string>
    <string name="app_name">京东</string>
    <string name="upomp_bypay_error">错误</string>
    <string name="upomp_bypay_linkerror">网络连接错误，请重新尝试！</string>
    <string name="upomp_bypay_fileerror">系统检测到您的手机POS已被恶意修改，为确保您的支付安全，请重新安装使用！</string>
    <string name="upomp_bypay_please">"请过 "</string>
    <string name="upomp_bypay_sendMac">" 秒后再发送验证码!"</string>
    <string name="upomp_bypay_get">获取</string>
    <string name="upomp_bypay_debitcard">借记卡</string>
    <string name="upomp_bypay_creditcard">信用卡</string>
    <string name="upomp_bypay_sixtotwenty">6~20位字符组合</string>
    <string name="upomp_bypay_sixtotwelve">6~12位字符组合</string>
    <string name="upomp_bypay_twotosixteen">2~16位字符组合</string>
    <string name="upomp_bypay_firstmobilenum">手 机 号 码 :</string>
    <string name="upomp_bypay_secondmobilenum">手机号码</string>
    <string name="upomp_bypay_thirdmobilenum">手机号码:</string>
    <string name="upomp_bypay_loading">登录</string>
    <string name="upomp_bypay_register">注册</string>
    <string name="upomp_bypay_username">"用   户   名  :"</string>
    <string name="upomp_bypay_firstshortmessagesecuritycode">短信验证码:</string>
    <string name="upomp_bypay_secondshortmessagesecuritycode">6位短信验证码</string>
    <string name="upomp_bypay_selectcard">选 择 卡 种 :</string>
    <string name="upomp_bypay_firstcardid">银行卡卡号:</string>
    <string name="upomp_bypay_secondcardid">银行卡卡号</string>
    <string name="upomp_bypay_firstcardpsw">银行卡密码:</string>
    <string name="upomp_bypay_secondcardpsw">银行卡密码</string>
    <string name="upomp_bypay_welcome">页面欢迎语:</string>
    <string name="upomp_bypay_hint">若与您预设的资料不符，极有可能是钓鱼软件，请终止操作。</string>
    <string name="upomp_bypay_editpass">修改密码</string>
    <string name="upomp_bypay_editinfo">更改手机号码</string>
    <string name="upomp_bypay_addcard">添加银行卡</string>
    <string name="upomp_bypay_selectdate">请选择有效期。</string>
    <string name="upomp_bypay_date">"有   效   期  :"</string>
    <string name="upomp_bypay_securityissue">安 全 问 题 :</string>
    <string name="upomp_bypay_securityquestionanswer">问 题 答 案 :</string>
    <string name="upomp_bypay_checkcode">"校   验   码  :"</string>
    <string name="upomp_bypay_payamount">支 付 金 额 :</string>
    <string name="upomp_bypay_backnum">信用卡背面末三位数字</string>
    <string name="upomp_bypay_affirm">确认</string>
    <string name="upomp_bypay_return">返回</string>
    <string name="upomp_bypay_failcause">失败原因:</string>
    <string name="upomp_bypay_cardmanage">银行卡管理</string>
    <string name="upomp_bypay_gantan">！</string>
    <string name="upomp_bypay_next">下一步</string>
    <string name="upomp_bypay_cancel">取消</string>
    <string name="upomp_bypay_getpass">忘记密码</string>
    <string name="upomp_bypay_cardtype">" 卡 类 型 :"</string>
    <string name="upomp_bypay_returnlist">返回列表</string>
    <string name="upomp_bypay_cardunknown">未知卡</string>
    <string name="upomp_bypay_removecard">解除关联</string>
    <string name="upomp_bypay_affirmremovecard">确认要解除关联本银行卡？[</string>
    <string name="upomp_bypay_changedefultcard">默认卡变更</string>
    <string name="upomp_bypay_affirmchangedefultcard">是否设置本卡为默认卡？[</string>
    <string name="upomp_bypay_prompt">提示</string>
    <string name="upomp_bypay_selectsucceed">设置成功！</string>
    <string name="upomp_bypay_selectfail">设置失败，请重新尝试！</string>
    <string name="upomp_bypay_updatelist">更新列表</string>
    <string name="upomp_bypay_balance">余额查询</string>
    <string name="upomp_bypay_changepswsucceed">修改密码成功!</string>
    <string name="upomp_bypay_newpsw">"新   密   码  :"</string>
    <string name="upomp_bypay_enternewpsw">确认新密码:</string>
    <string name="upomp_bypay_logined">已登录</string>
    <string name="upomp_bypay_payfail">支付失败</string>
    <string name="upomp_bypay_yuan">" 元"</string>
    <string name="upomp_bypay_accountmainactivity_header">我的信息</string>
    <string name="upomp_bypay_accountmain_myinfo">个人信息</string>
    <string name="upomp_bypay_accountmain_username">" 用 户 名 :"</string>
    <string name="upomp_bypay_accountmain_email">邮箱地址:</string>
    <string name="upomp_bypay_addcard_binduser">绑 定 用 户 :</string>
    <string name="upomp_bypay_addcard_cvn2">C V N 2 :</string>
    <string name="upomp_bypay_addcard_selectdefultcard">设置成默认银行卡</string>
    <string name="upomp_bypay_balanceresult_balance">余额查询结果</string>
    <string name="upomp_bypay_balanceresult_balancesucceed">余额查询成功！</string>
    <string name="upomp_bypay_balanceresult_balancefail">余额查询失败！</string>
    <string name="upomp_bypay_balanceresult_balancenumber">您的银行卡余额是</string>
    <string name="upomp_bypay_balanceresult_yuan">元。</string>
    <string name="upomp_bypay_bankrestlt_succeed">添加银行卡成功！</string>
    <string name="upomp_bypay_bankrestlt_fail">添加银行卡失败！</string>
    <string name="upomp_bypay_bankrestlt_cardid">"  卡    号  :"</string>
    <string name="upomp_bypay_bankrestlt_continuebank">继续绑卡</string>
    <string name="upomp_bypay_cardinfo_hint1">"        您可以对该银行卡进行以下操作：默认卡设置、解除关联、余额查询。"</string>
    <string name="upomp_bypay_cardinfo_hint2">"        您可以对该银行卡进行以下操作：默认卡设置、解除关联。"</string>
    <string name="upomp_bypay_cardinfo_removecardsucceed">银行卡解除关联成功!</string>
    <string name="upomp_bypay_cardinfo">银行卡信息</string>
    <string name="upomp_bypay_cardinfo_issuercard">发卡银行:</string>
    <string name="upomp_bypay_cardinfo_cardid">"  卡   号   :"</string>
    <string name="upomp_bypay_cardmainactivity_firstlogin">您尚未登录，请先登录再进行银行卡管理操作。</string>
    <string name="upomp_bypay_cardmainactivity_defultcard">(默认卡)</string>
    <string name="upomp_bypay_cardmainactivity_cancelbanksucced">取消绑定成功!</string>
    <string name="upomp_bypay_cardmainactivity_issuedcard">"发卡行: "</string>
    <string name="upomp_bypay_cardmainactivity_cardtype">"
卡类型: "</string>
    <string name="upomp_bypay_cardmainactivity_cardid">"
    卡号: "</string>
    <string name="upomp_bypay_cardmainactivity_close">关闭</string>
    <string name="upomp_bypay_cardmain_relevancecard">你已关联的银行卡:</string>
    <string name="upomp_bypay_cardmain_norelevancecard">你还没有关联的银行卡！</string>
    <string name="upomp_bypay_cardmain_hint1">"        请点击添加银行卡按钮添加银行卡！"</string>
    <string name="upomp_bypay_cardmain_hint2">"        选择您绑定的银行卡后，您可以进行以下操作：查看银行卡信息；默认卡设置；银行卡删除；余额查询！"</string>
    <string name="upomp_bypay_editinfoactivity_nochange">新手机号码与原手机号码一样，无需进行修改。</string>
    <string name="upomp_bypay_editinfoactivity_inputtelnum">请输入原手机号码。</string>
    <string name="upomp_bypay_editinfoactivity_inputtelnum1">原手机号码格式有误，应为11位数字。</string>
    <string name="upomp_bypay_editinfoactivity_changetelfail">更改手机号码失败！</string>
    <string name="upomp_bypay_editinfoactivity_changetelsucceed">更改手机号码成功！</string>
    <string name="upomp_bypay_editinfo_registertel">已注册手机:</string>
    <string name="upomp_bypay_editinfo_oldtel">原手机号码:</string>
    <string name="upomp_bypay_editinfo_oldtelhint">原手机号码</string>
    <string name="upomp_bypay_editinfo_newtel">新手机号码:</string>
    <string name="upomp_bypay_editinfo_newtelhint">新手机号码</string>
    <string name="upomp_bypay_editinfo_hint">"        如果您的用户名是手机号，您将不能修改手机号。"</string>
    <string name="upomp_bypay_editpassactivity_inputoldpsw">请输入原密码。</string>
    <string name="upomp_bypay_editpassactivity_oldpswfail">原密码格式有误，长度应为6-12位。</string>
    <string name="upomp_bypay_editpass_oldpsw">"原   密   码  :"</string>
    <string name="upomp_bypay_editpass_oldpswhint">原密码</string>
    <string name="upomp_bypay_getpassactivity_updatepsw">密码重置</string>
    <string name="upomp_bypay_loginactivity_userlogin">用户登录</string>
    <string name="upomp_bypay_loginactivity_loginsucceed">登录成功!</string>
    <string name="upomp_bypay_loginactivity_loginfail">登录失败!</string>
    <string name="upomp_bypay_login_username">"用   户   名  :"</string>
    <string name="upomp_bypay_login_psw">"   密      码   :"</string>
    <string name="upomp_bypay_login_webvalidcode">"校   验   码  :"</string>
    <string name="upomp_bypay_login_hint">"        请使用中国银联的注册帐号及密码登录，为保证账户安全，如果您连续五次输错密码，您的账号将被锁定三个小时，给您带来的不便敬请原谅！"</string>
    <string name="upomp_bypay_pay_it_previewdifferent">若与您预设的资料不符，极有可能是钓鱼软件，请终止支付。</string>
    <string name="upomp_bypay_pay_it_approvepay">认证支付</string>
    <string name="upomp_bypay_pay_it_expresspay">快捷支付</string>
    <string name="upomp_bypay_pay_it_valuecardpay">储值卡支付</string>
    <string name="upomp_bypay_pay_it_preventfish">"        为防止钓鱼应用，请核对您收到的95516发送的短信中，安全提示信息是否为："</string>
    <string name="upomp_bypay_carddialog_select">选择操作</string>
    <string name="upomp_bypay_carddialog_seecardinfo">银行卡信息查看</string>
    <string name="payment_method">支付方式</string>
    <string name="cancle">取消</string>
    <string name="ok">确定</string>
    <string name="dialog_payment_total_moaney">应付总价：￥%1$.2f元</string>
    <string name="dialog_payment_online">在线支付</string>
    <string name="dialog_payment_balance">余额支付(可用余额%1$.2f元)</string>
    <string name="dialog_payment_balance_unavailable">当前余额不足，无法购买</string>
    <string name="dialog_payment_points">京豆支付(当前京豆%1$d)</string>
    <string name="dialog_payment_points_unavailable">当前京豆不足，无法购买</string>
    <string name="dialog_payment_coupon_title">优惠券支付</string>
    <string name="dialog_payment_coupon_item_message">彩票京券%1$.0f元(%2$s前有效)</string>
    <string name="menu_setup_no_image_title">节省流量设置</string>
    <string name="menu_setup_message_title">站内消息设置</string>
    <string name="register">注册</string>
    <string name="accept_agreement">同意，</string>
    <string name="show_agreement"><u>注册协议</u></string>
    <string name="no_image_switch_title">2G/3G网络手动下载图片</string>
    <string name="no_image_switch_key">jd_no_image_switch</string>
    <string name="local_cache_setup_title">本地缓存设置</string>
    <string name="local_cache_clear_image_title">清除缓存图片</string>
    <string name="local_cache_clear_image_key">local_cache_clear_image</string>
    <string name="msg_auto_update_switch_title">接收消息通知</string>
    <string name="msg_auto_update_switch_category">msg_auto_update_category</string>
    <string name="msg_auto_update_switch_key">msg_auto_update_switch</string>
    <string name="msg_auto_update_switch_summary_on">已开启消息推送通知</string>
    <string name="msg_auto_update_switch_summary_off">已关闭消息推送通知</string>
    <string name="msg_auto_update_category_filter_key">msg_auto_update_category_filter_key</string>
    <string name="msg_auto_update_category_filter_title">推送消息筛选</string>
    <string name="msg_auto_un_push_time_key">msg_auto_un_push_time_key</string>
    <string name="msg_auto_un_push_time_title">设定静音时间段</string>
    <string name="msg_auto_un_push_time_summary">请设定需要静音的时间段</string>
    <string name="location_set">位置设置</string>
    <string name="location_update_title">设置地理位置信息</string>
    <string name="location_update_key">update location information</string>
    <string name="quick_register_promt_text">输入手机号，点击\"获取密码\"后，系统会自动下发一条默认密码短信。</string>
    <string name="quick_register_login_promt_text">手机短信密码正发往您的手机！</string>
    <string name="quick_register_info">【提示】</string>
    <string name="quick_register_info1">1.使用手机号注册免费</string>
    <string name="quick_register_info2">2.此手机号用来登录京东</string>
    <string name="quick_register_info3">3.您还可以选择其他注册方式</string>
    <string name="quick_register_login_info1">1.注册成功后，即可用手机号和密码登录</string>
    <string name="quick_register_login_info2">2.如在120秒内未收到系统下发的短信，请点击</string>
    <string name="quick_register_resend">重新接受短信</string>
    <string name="quick_register_login_edithint">请输入您收到的短信密码</string>
    <string name="quick_register_edithint">请输入您的手机号</string>
    <string name="quick_register_head_promt1">输入手机号</string>
    <string name="quick_register_head_promt2">输入短信密码</string>
    <string name="quick_register_gainpassword">获取密码</string>
    <string name="host_set_string">gw服务器</string>
    <string name="mhost_set_string">m服务器</string>
    <string name="paihost_set_string">拍照购服务器</string>
    <string name="msghost_set_string">消息服务器</string>
    <string name="testmode_set_string">模拟数据(未经开发人员提示不要勾选)</string>
</resources>