<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ll_card_dialog" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="5.0px" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:id="@id/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upomp_bypay_carddialog_select" />
        <LinearLayout android:orientation="vertical" android:padding="5.0px" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:textColor="#ff000000" android:gravity="center" android:id="@id/btn_card_info" android:layout_width="180.0dip" android:layout_height="40.0dip" android:text="@string/upomp_bypay_carddialog_seecardinfo" />
            <Button android:textColor="#ff000000" android:gravity="center" android:id="@id/btn_set_default" android:layout_width="180.0dip" android:layout_height="40.0dip" android:text="@string/upomp_bypay_affirmchangedefultcard" />
            <Button android:textColor="#ff000000" android:gravity="center" android:id="@id/btn_cancel_bind" android:layout_width="180.0dip" android:layout_height="40.0dip" android:text="@string/upomp_bypay_removecard" />
            <Button android:textColor="#ff000000" android:gravity="center" android:id="@id/btn_get_balance" android:layout_width="180.0dip" android:layout_height="40.0dip" android:text="@string/upomp_bypay_balance" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>