<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#fff2f2f2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/common_title" layout="@layout/title" />
    <LinearLayout android:orientation="horizontal" android:id="@id/quick_register_head_image" android:background="@drawable/quick_register_headtab1" android:layout_width="fill_parent" android:layout_height="50.0dip" android:weightSum="100.0" android:layout_below="@id/common_title">
        <TextView android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:text="@string/quick_register_head_promt1" android:layout_weight="50.0" />
        <TextView android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:text="@string/quick_register_head_promt2" android:layout_weight="50.0" />
    </LinearLayout>
    <ScrollView android:id="@id/quick_register_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/quick_register_head_image">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/get_register_number_layout" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0dip" android:textColor="#ffc7aa94" android:id="@id/quick_register_title_textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/quick_register_promt_text" />
                <EditText android:id="@id/phone_register_number_editText" android:background="@drawable/edit_text_x" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="15.0dip" android:hint="@string/quick_register_edithint" android:singleLine="true" android:maxLength="11" android:layout_below="@id/quick_register_title_textView" android:inputType="phone" />
                <CheckBox android:id="@id/quick_register_agreement_checkBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:checked="true" android:button="@drawable/login_remember" android:text="@string/accept_agreement" android:layout_below="@id/phone_register_number_editText" android:layout_alignLeft="@id/phone_register_number_editText" />
                <TextView android:textSize="16.0dip" android:textStyle="bold" android:id="@id/quick_register_show_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="19.0dip" android:text="@string/show_agreement" android:layout_toRightOf="@id/quick_register_agreement_checkBox" android:layout_below="@id/phone_register_number_editText" />
                <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/phone_register_button" android:background="@drawable/quick_register_login_button" android:layout_width="125.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:adjustViewBounds="true" android:text="@string/quick_register_gainpassword" android:layout_below="@id/quick_register_show_agreement" android:layout_centerHorizontal="true" />
                <TextView android:textSize="15.0dip" android:textColor="#ffb2af86" android:id="@id/quick_register_info_textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/quick_register_info" android:layout_below="@id/phone_register_button" />
                <TextView android:textSize="14.0dip" android:textColor="#ffb2af86" android:id="@id/quick_register_info_textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/quick_register_info1" android:layout_below="@id/quick_register_info_textView1" />
                <TextView android:textSize="14.0dip" android:textColor="#ffb2af86" android:id="@id/quick_register_info_textView3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/quick_register_info2" android:layout_below="@id/quick_register_info_textView2" />
                <TextView android:textSize="14.0dip" android:textColor="#ffb2af86" android:id="@id/quick_register_info_textView4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/quick_register_info3" android:layout_below="@id/quick_register_info_textView3" />
                <RelativeLayout android:id="@id/quick_register_to_register_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_below="@id/quick_register_info_textView4" style="@style/edit_text">
                    <TextView android:textSize="17.0dip" android:id="@id/quick_register_to_register_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:text="普通用户注册" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <Button android:id="@id/quick_register_goseeagreement" android:background="@drawable/android_list_idex" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>