<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#fff2f2f2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/common_title" layout="@layout/title" />
    <LinearLayout android:orientation="horizontal" android:id="@id/quick_register_login_head_image" android:background="@drawable/quick_register_headtab1" android:layout_width="fill_parent" android:layout_height="50.0dip" android:weightSum="100.0" android:layout_below="@id/common_title">
        <TextView android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:text="@string/quick_register_head_promt1" android:layout_weight="50.0" />
        <TextView android:gravity="center" android:layout_width="160.0dip" android:layout_height="fill_parent" android:text="@string/quick_register_head_promt2" android:layout_weight="50.0" />
    </LinearLayout>
    <ScrollView android:id="@id/quick_regist_scrollview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/quick_register_login_head_image">
        <RelativeLayout android:id="@id/quick_register_login_main_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="13.0dip" android:textColor="#ffc7aa94" android:id="@id/quick_register_longin_title_textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="17.0dip" android:text="@string/quick_register_login_promt_text" />
            <EditText android:id="@id/registerPwd_number_editText" android:background="@drawable/edit_text_x" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="27.0dip" android:layout_marginRight="10.0dip" android:hint="@string/quick_register_login_edithint" android:singleLine="true" android:maxLength="7" android:layout_below="@id/quick_register_longin_title_textView" android:inputType="textPassword" />
            <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/registerPwd_login_button" android:background="@drawable/quick_register_login_button" android:layout_width="125.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:adjustViewBounds="true" android:text="@string/register" android:layout_below="@id/registerPwd_number_editText" android:layout_centerHorizontal="true" style="@style/common_button" />
            <TextView android:textSize="15.0dip" android:textColor="#ffb2af86" android:id="@id/quick_register_longin_info_textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:text="@string/quick_register_info" android:layout_below="@id/registerPwd_login_button" />
            <TextView android:textSize="14.0dip" android:textColor="#ffb2af86" android:id="@id/quick_register_longin_info_textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/quick_register_login_info1" android:layout_below="@id/quick_register_longin_info_textView1" />
            <TextView android:textSize="14.0dip" android:textColor="#ffb2af86" android:id="@id/quick_register_longin_info_textView3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/quick_register_login_info2" android:layout_below="@id/quick_register_longin_info_textView2" />
            <Button android:textSize="13.0sp" android:textColor="#ff8d8d8d" android:id="@id/quick_register_login_resend_button" android:background="@drawable/quick_register_login_resend_button" android:padding="5.0dip" android:layout_width="125.0dip" android:layout_height="40.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:adjustViewBounds="true" android:text="@string/quick_register_resend" android:layout_below="@id/quick_register_longin_info_textView3" android:layout_centerHorizontal="true" style="@style/common_button" />
            <TextView android:textSize="13.0sp" android:id="@id/quick_register_timer_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="" android:layout_below="@id/quick_register_login_resend_button" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>